Fix the zooming issue on mobile browsers

--- a/styles/main.css
+++ b/styles/main.css
@@ -2,6 +2,11 @@ body {
     font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
     user-select: none;
     font-size: 25px;
     margin-top: 3vh;
